# rag-time-art-facts

./: .gitignore  README.md  pyproject.toml
fast_api_backend_1/: __init__.py  main.py
fast_api_backend_1/api/: chat.py  model.py  routes.py  vectorize.py
fast_api_backend_one/: llm_manager.py  main.py
fast_api_backend_one/api/: chat.py  deps.py  model.py  routes.py
scripts/: cohere_test.py  open_ai_test.py  system_prompt_test.py
src/python/LLM/: LLM_Manager.py  sqlite_db.py  types.py
src/python/LLM/models/: Connection_Config_Model.py  Enum_Types.py  LLM_Model.py  Pricing_Model.py  Rate_Limits_Model.py  Token_Limit_Model.py  Tokenizer_Config_Model.py  Usage_Stats_Model.py  __init__.py
src/python/utils/: call_timer.py
streamlit_frontend_one/: app.py
streamlit_standalone_1/: app.py  requirements.txt
streamlit_standalone_cohere_chat/: app.py  requirements.txt
streamlit_standalone_one/: app.py  requirements.txt
tests/: test_llm_engine.py
