[project]
name = "rag-time-art-facts"
version = "0.1.0"
description = "FastAPI server for model orchestration and art facts workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=6.1.0",
    "fastapi>=0.115.0",
    "openai>=2.33.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-watch>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-q"
